--- a/app/rent-brand.html
+++ b/app/rent-brand.html
@@ -724,7 +724,7 @@
                 </a>
               </li>
             </ul>
-            <button class="btn-main header-btn">Заказать звонок</button>
+            <button class="btn-main header-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Заказать звонок</button>
           </div>
           </div>
         </div>
@@ -756,26 +756,11 @@
                         <form action="#" class="filters">
                         <img src="images/icons/cross.svg" alt="icon" class="filters-cross">
                         <div class="filters-item">
-                          <h3 class="drop">Оборудование
+                          <h3 class="drop">Оборудование в аренду
                             <img src="images/icons/arrow-drop.svg" alt="icon">
                           </h3>
                           <div class="filters-content">
                             <a href="#" class="filters-link">Электронные тахеометры</a>
-                            <a href="#" class="filters-link">Лазерные сканеры / Системы лазерного сканирования</a>
-                            <a href="#" class="filters-link">Геодезические GNSS приемники</a>
-                            <a href="#" class="filters-link">Модемы для GNSS приемников</a>
-                            <a href="#" class="filters-link">Нивелиры</a>
-                            <a href="#" class="filters-link">Теодолиты</a>
-                            <a href="#" class="filters-link">Модемы для GNSS приемников</a>
-                            <a href="#" class="filters-link">Приборы вертикального проектирования</a>
-                            <a href="#" class="filters-link">Квадранты</a>
-                            <a href="#" class="filters-link">Гравиметры</a>
-                            <a href="#" class="filters-link">Беспилотные воздушные судна <br>/ БПЛА</a>
-                            <a href="#" class="filters-link">Трассоискатели</a>
-                            <a href="#" class="filters-link">Эхолоты</a>
-                            <a href="#" class="filters-link">Георадары</a>
-                              <a href="#" class="filters-link">Аксессуары</a>
-                              <a href="#" class="filters-link">Софт</a>
                           </div>
                         </div>
                         <div class="filters-item">
@@ -784,281 +769,9 @@
                           </h3>
                           <div class="filters-content">
                               <div class="filters-w">
-                                <input type="checkbox" class="filters__checkbox">
-                                <div class="filters-block">
-                                  <p class="drop">Trimble
-                                    <img src="images/icons/arrow-drop.svg" alt="icon">
-                                  </p>
-                                <ul class="filters-drop">
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S3</p>
-                                  </label>
-                                  </li>
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S5</p>
-                                  </label>
-                                  </li>
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S7</p>
-                                  </label>
-                                  </li>
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S9</p>
-                                  </label>
-                                  </li>
-                                </ul>
-                                </div>
-                              </div>
-                              <div class="filters-w">
-                                <input type="checkbox" class="filters__checkbox">
+                                <input type="checkbox" class="filters__checkbox" checked>
                                 <div class="filters-block">
                                   <p class="drop">Leica
-                                    <img src="images/icons/arrow-drop.svg" alt="icon">
-                                  </p>
-                                <ul class="filters-drop">
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S3</p>
-                                  </label>
-                                  </li>
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S5</p>
-                                  </label>
-                                  </li>
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S7</p>
-                                  </label>
-                                  </li>
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S9</p>
-                                  </label>
-                                  </li>
-                                </ul>
-                                </div>
-                              </div>
-                              <div class="filters-w">
-                                <input type="checkbox" class="filters__checkbox">
-                                <div class="filters-block">
-                                  <p class="drop">Sokkia
-                                    <img src="images/icons/arrow-drop.svg" alt="icon">
-                                  </p>
-                                <ul class="filters-drop">
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S3</p>
-                                  </label>
-                                  </li>
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S5</p>
-                                  </label>
-                                  </li>
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S7</p>
-                                  </label>
-                                  </li>
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S9</p>
-                                  </label>
-                                  </li>
-                                </ul>
-                                </div>
-                              </div>
-                              <div class="filters-w">
-                                <input type="checkbox" class="filters__checkbox">
-                                <div class="filters-block">
-                                  <p class="drop">Topcon
-                                    <img src="images/icons/arrow-drop.svg" alt="icon">
-                                  </p>
-                                <ul class="filters-drop">
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S3</p>
-                                  </label>
-                                  </li>
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S5</p>
-                                  </label>
-                                  </li>
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S7</p>
-                                  </label>
-                                  </li>
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S9</p>
-                                  </label>
-                                  </li>
-                                </ul>
-                                </div>
-                              </div>
-                              <div class="filters-w">
-                                <input type="checkbox" class="filters__checkbox">
-                                <div class="filters-block">
-                                  <p class="drop">Nikon
-                                    <img src="images/icons/arrow-drop.svg" alt="icon">
-                                  </p>
-                                <ul class="filters-drop">
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S3</p>
-                                  </label>
-                                  </li>
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S5</p>
-                                  </label>
-                                  </li>
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S7</p>
-                                  </label>
-                                  </li>
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S9</p>
-                                  </label>
-                                  </li>
-                                </ul>
-                                </div>
-                              </div>
-                              <div class="filters-w">
-                                <input type="checkbox" class="filters__checkbox">
-                                <div class="filters-block">
-                                  <p class="drop">Spectra Precision
-                                    <img src="images/icons/arrow-drop.svg" alt="icon">
-                                  </p>
-                                <ul class="filters-drop">
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S3</p>
-                                  </label>
-                                  </li>
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S5</p>
-                                  </label>
-                                  </li>
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S7</p>
-                                  </label>
-                                  </li>
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S9</p>
-                                  </label>
-                                  </li>
-                                </ul>
-                                </div>
-                              </div>
-                              <div class="filters-w">
-                                <input type="checkbox" class="filters__checkbox">
-                                <div class="filters-block">
-                                  <p class="drop">South
-                                    <img src="images/icons/arrow-drop.svg" alt="icon">
-                                  </p>
-                                <ul class="filters-drop">
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S3</p>
-                                  </label>
-                                  </li>
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S5</p>
-                                  </label>
-                                  </li>
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S7</p>
-                                  </label>
-                                  </li>
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S9</p>
-                                  </label>
-                                  </li>
-                                </ul>
-                                </div>
-                              </div>
-                              <div class="filters-w">
-                                <input type="checkbox" class="filters__checkbox">
-                                <div class="filters-block">
-                                  <p class="drop">Ruide
-                                    <img src="images/icons/arrow-drop.svg" alt="icon">
-                                  </p>
-                                <ul class="filters-drop">
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S3</p>
-                                  </label>
-                                  </li>
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S5</p>
-                                  </label>
-                                  </li>
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S7</p>
-                                  </label>
-                                  </li>
-                                  <li>
-                                    <label class="filters-label">
-                                    <input type="checkbox" class="filters__checkbox">
-                                    <p>S9</p>
-                                  </label>
-                                  </li>
-                                </ul>
-                                </div>
-                              </div>
-                              <div class="filters-w">
-                                <input type="checkbox" class="filters__checkbox">
-                                <div class="filters-block">
-                                  <p class="drop">Geomax
                                     <img src="images/icons/arrow-drop.svg" alt="icon">
                                   </p>
                                 <ul class="filters-drop">
@@ -2001,7 +1714,7 @@
 
                 <label class="cta-label">
                     <input type="checkbox" required checked class="cta-checkbox">
-                    <p>Даю свое согласие на обработку персональных данных</p>
+                    <p>Даю свое согласие на <a href="#!">обработку персональных данных</a></p>
                 </label>
                 <div class="service-center-social calc-social">
                     <p>Задать вопрос в мессенджеры</p>
@@ -2058,7 +1771,7 @@
             <label class="control control--checkbox">
               <input type="checkbox" checked="checked"/>
                 <div class="control__indicator"></div>
-                <span>Даю свое согласие на обработку персональных данных</span>
+                <span>Даю свое согласие на <a href="#!">обработку персональных данных</a></span>
             </label>
 
             <div class="modal-btn">
@@ -2123,7 +1836,7 @@
             <label class="control control--checkbox">
               <input type="checkbox" checked="checked"/>
                 <div class="control__indicator"></div>
-                <span>Даю свое согласие на обработку персональных данных</span>
+                <span>Даю свое согласие на <a href="#!">обработку персональных данных</a></span>
               </label>
           </form>
         </div>
