--- a/app/support.html
+++ b/app/support.html
@@ -724,7 +724,7 @@
                 </a>
               </li>
             </ul>
-            <button class="btn-main header-btn">Заказать звонок</button>
+            <button class="btn-main header-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Заказать звонок</button>
           </div>
           </div>
         </div>
@@ -740,7 +740,7 @@
         <a href="#!" class="whatsapp"><img src="images/icons/whatsapp-icon.svg" alt=""></a>
       </div>
       
-      <section class="service-center margin-for-header for-all">
+      <section class="service-center margin-for-header for-all support-ser">
         <div class="container">
           <div class="row">
               <div class="col-lg-12">
@@ -1278,7 +1278,7 @@
             <label class="control control--checkbox">
               <input type="checkbox" checked="checked"/>
                 <div class="control__indicator"></div>
-                <span>Даю свое согласие на обработку персональных данных</span>
+                <span>Даю свое согласие на <a href="#!">обработку персональных данных</a></span>
               </label>
           </form>
         </div>
@@ -1317,7 +1317,7 @@
             <label class="control control--checkbox">
               <input type="checkbox" checked="checked"/>
                 <div class="control__indicator"></div>
-                <span>Даю свое согласие на обработку персональных данных</span>
+                <span>Даю свое согласие на <a href="#!">обработку персональных данных</a></span>
               </label>
           </form>
         </div>
@@ -1363,7 +1363,7 @@
             <label class="control control--checkbox">
               <input type="checkbox" checked="checked"/>
                 <div class="control__indicator"></div>
-                <span>Даю свое согласие на обработку персональных данных</span>
+                <span>Даю свое согласие на <a href="#!">обработку персональных данных</a></span>
               </label>
           </form>
         </div>
