--- a/app/works.html
+++ b/app/works.html
@@ -724,7 +724,7 @@
                 </a>
               </li>
             </ul>
-            <button class="btn-main header-btn">Заказать звонок</button>
+            <button class="btn-main header-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Заказать звонок</button>
           </div>
           </div>
         </div>
@@ -1330,7 +1330,7 @@
             <label class="control control--checkbox">
               <input type="checkbox" checked="checked"/>
                 <div class="control__indicator"></div>
-                <span>Даю свое согласие на обработку персональных данных</span>
+                <span>Даю свое согласие на <a href="#!">обработку персональных данных</a></span>
               </label>
           </form>
         </div>
@@ -1380,8 +1380,8 @@
     </div>
   </div>
 
+
   <script src="js/main.min.js"></script>
-  <script src="js/main.js"></script>
   <script src="libs/bootstrap5/bootstrap.min.js"></script>
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/script.js"></script>
