--- a/app/checkout-page.html
+++ b/app/checkout-page.html
@@ -724,7 +724,7 @@
                 </a>
               </li>
             </ul>
-            <button class="btn-main header-btn">Заказать звонок</button>
+            <button class="btn-main header-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Заказать звонок</button>
           </div>
           </div>
         </div>
@@ -807,7 +807,7 @@
                     <label class="control control--checkbox">
                       <input type="checkbox" checked="checked"/>
                       <div class="control__indicator"></div>
-                      <span>Даю свое согласие на обработку персональных данных</span>
+                      <span>Даю свое согласие на <a href="#!">обработку персональных данных</a></span>
                     </label>
 
                     <div class="form-btn">
@@ -1466,7 +1466,7 @@
             <label class="control control--checkbox">
               <input type="checkbox" checked="checked"/>
                 <div class="control__indicator"></div>
-                <span>Даю свое согласие на обработку персональных данных</span>
+                <span>Даю свое согласие на <a href="#!">обработку персональных данных</a></span>
               </label>
           </form>
         </div>
@@ -1512,7 +1512,7 @@
             <label class="control control--checkbox">
               <input type="checkbox" checked="checked"/>
                 <div class="control__indicator"></div>
-                <span>Даю свое согласие на обработку персональных данных</span>
+                <span>Даю свое согласие на <a href="#!">обработку персональных данных</a></span>
               </label>
           </form>
         </div>
