--- a/app/index.html
+++ b/app/index.html
@@ -724,7 +724,7 @@
                 </a>
               </li>
             </ul>
-            <button class="btn-main header-btn">Заказать звонок</button>
+            <button class="btn-main header-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Заказать звонок</button>
           </div>
           </div>
         </div>
@@ -749,7 +749,7 @@
                 <div class="hero-info">
                 <h1 class="hero__title">Продажа и аренда <br> геодезического <br> оборудования</h1>
                 <p class="hero__text">Самый большой <br> шоурум в Москве</p>
-                <button class="btn-main hero__btn">Получить консультацию</button>
+                <button class="btn-main hero__btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Получить консультацию</button>
               </div>
               <ul class="hero-list">
                 <li>
@@ -775,7 +775,7 @@
             <div class="hero-info">
             <h1 class="hero__title">Продажа и аренда <br> геодезического <br> оборудования</h1>
             <p class="hero__text">Самый большой <br> шоурум</p>
-            <button class="btn-main hero__btn">Получить консультацию</button>
+            <button class="btn-main hero__btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Получить консультацию</button>
           </div>
           <ul class="hero-list">
             <li>
@@ -801,7 +801,7 @@
             <div class="hero-info">
             <h1 class="hero__title">Новинки недели</h1>
             <p class="hero__text">Новая линейка тахеометров Leica</p>
-            <button class="btn-main hero__btn">Получить консультацию</button>
+            <button class="btn-main hero__btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Получить консультацию</button>
           </div>
           <ul class="hero-list">
             <li>
@@ -2277,7 +2277,7 @@
             <label class="control control--checkbox">
               <input type="checkbox" checked="checked"/>
                 <div class="control__indicator"></div>
-                <span>Даю свое согласие на обработку персональных данных</span>
+                <span>Даю свое согласие на <a href="#!">обработку персональных данных</a></span>
               </label>
           </form>
         </div>
