--- a/app/rent-category.html
+++ b/app/rent-category.html
@@ -724,7 +724,7 @@
                 </a>
               </li>
             </ul>
-            <button class="btn-main header-btn">Заказать звонок</button>
+            <button class="btn-main header-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Заказать звонок</button>
           </div>
           </div>
         </div>
@@ -1098,10 +1098,10 @@
                           <input required type="text" placeholder="Ваше имя" class="cta-input">
                           <input required minlength="18" pattern=".{18,18}" type="tel" name="phone" placeholder="Ваш телефон" class="cta-input">
                           <input required type="text" placeholder="Комментарий" class="cta-input">
-                          <button type="submit" class="btn-main cta-btn">Получить консультацию</button>
+                          <button type="submit" class="btn-main cta-btn" data-bs-toggle="modal" data-bs-target="#thanks">Получить консультацию</button>
                           <label class="cta-label">
                           <input type="checkbox" required checked class="cta-checkbox">
-                          <p>Оставляя заявку вы соглашаетесь <br> с обработкой персональных данных</p>
+                          <p>Оставляя заявку вы соглашаетесь <br> с <a href="#!">обработкой персональных данных</a></p>
                           </label>
                       </form>
                   </aside>
@@ -1256,7 +1256,7 @@
 
                                   <label class="cta-label">
                                       <input type="checkbox" required checked class="cta-checkbox">
-                                      <p>Даю свое согласие на обработку персональных данных</p>
+                                      <p>Даю свое согласие на <a href="#!">обработку персональных данных</a></p>
                                   </label>
                                   <div class="service-center-social calc-social">
                                       <p>Задать вопрос в мессенджеры</p>
@@ -1833,10 +1833,10 @@
                   <input required type="text" placeholder="Ваше имя" class="cta-input">
                   <input required minlength="18" pattern=".{18,18}" type="tel" name="phone" placeholder="Ваш телефон" class="cta-input">
                   <input required type="text" placeholder="Комментарий" class="cta-input">
-                  <button type="submit" class="btn-main cta-btn">Получить консультацию</button>
+                  <button type="submit" class="btn-main cta-btn" data-bs-toggle="modal" data-bs-target="#thanks">Получить консультацию</button>
                   <label class="cta-label">
                   <input type="checkbox" required checked class="cta-checkbox">
-                  <p>Оставляя заявку вы соглашаетесь <br> с обработкой персональных данных</p>
+                  <p>Оставляя заявку вы соглашаетесь <br> с <a href="#!">обработкой персональных данных</a></p>
                   </label>
                 </form>
               </div>
@@ -2174,7 +2174,7 @@
 
                 <label class="cta-label">
                     <input type="checkbox" required checked class="cta-checkbox">
-                    <p>Даю свое согласие на обработку персональных данных</p>
+                    <p>Даю свое согласие на <a href="#!">обработку персональных данных</a></p>
                 </label>
                 <div class="service-center-social calc-social">
                     <p>Задать вопрос в мессенджеры</p>
@@ -2231,7 +2231,7 @@
             <label class="control control--checkbox">
               <input type="checkbox" checked="checked"/>
                 <div class="control__indicator"></div>
-                <span>Даю свое согласие на обработку персональных данных</span>
+                <span>Даю свое согласие на <a href="#!">обработку персональных данных</a></span>
             </label>
 
             <div class="modal-btn">
@@ -2296,7 +2296,7 @@
             <label class="control control--checkbox">
               <input type="checkbox" checked="checked"/>
                 <div class="control__indicator"></div>
-                <span>Даю свое согласие на обработку персональных данных</span>
+                <span>Даю свое согласие на <a href="#!">обработку персональных данных</a></span>
               </label>
           </form>
         </div>
