--- a/app/service-center.html
+++ b/app/service-center.html
@@ -724,7 +724,7 @@
                 </a>
               </li>
             </ul>
-            <button class="btn-main header-btn">Заказать звонок</button>
+            <button class="btn-main header-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Заказать звонок</button>
           </div>
           </div>
         </div>
@@ -1001,7 +1001,7 @@
                       <label class="control control--checkbox">
                         <input type="checkbox" checked="checked"/>
                         <div class="control__indicator"></div>
-                        <span>Даю свое согласие на обработку персональных данных</span>
+                        <span>Даю свое согласие на <a href="#!">обработку персональных данных</a></span>
                       </label>
                     </div>
                   </div>
@@ -1437,7 +1437,7 @@
             <label class="control control--checkbox">
               <input type="checkbox" checked="checked"/>
                 <div class="control__indicator"></div>
-                <span>Даю свое согласие на обработку персональных данных</span>
+                <span>Даю свое согласие на <a href="#!">обработку персональных данных</a></span>
               </label>
           </form>
         </div>
@@ -1483,7 +1483,7 @@
             <label class="control control--checkbox">
               <input type="checkbox" checked="checked"/>
                 <div class="control__indicator"></div>
-                <span>Даю свое согласие на обработку персональных данных</span>
+                <span>Даю свое согласие на <a href="#!">обработку персональных данных</a></span>
               </label>
           </form>
         </div>
