--- a/app/blog.html
+++ b/app/blog.html
@@ -1193,6 +1193,37 @@
           <div class="thanks-block">
             <h3>Спасибо за вашу заявку!</h3>
 
+            <div class="thanks-text">
+              <p>Ожидайте звонка менеджера в рабочее время</p>
+            </div>
+            <div class="thanks-graphic">
+              <p><span>Пн-Пт:</span> с 9:30 до 19:00</p>
+              <p><span>Сб:</span> с 10:00 до 15:00</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Button trigger modal -->
+  <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#thanks2">
+    Launch demo modal
+  </button> -->
+
+  <!-- Modal -->
+  <div class="modal fade modal-thanks" id="thanks2" tabindex="-1" aria-labelledby="thanksLabel2" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="modal-close" data-bs-dismiss="modal" aria-label="Close">
+            <img src="images/icons/modal-close.svg" alt="">
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="thanks-block">
+            <h3>Спасибо за вашу заявку!</h3>
+
             <div class="thanks-order">
               <div class="icon">
                 <svg width="54" height="48" viewBox="0 0 54 48" fill="none" xmlns="http://www.w3.org/2000/svg">
