--- a/app/catalog-2.html
+++ b/app/catalog-2.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="ru">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=0">
-  <title>Tigeo</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet"> 
-  <link rel="stylesheet" href="css/style.min.css?ver=6">
-  <link rel="stylesheet" href="css/card.css">
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=0">
+    <title>Tigeo</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="libs/bootstrap5/bootstrap.min.css">
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="css/style.min.css?ver=6">
+    <link rel="stylesheet icon" href="css/card.css">
+  </head>
 
 <body>
   <div class="mob-menu">
@@ -1215,10 +1217,10 @@
                 <input required type="text" placeholder="Ваше имя" class="cta-input">
               <input required minlength="18" pattern=".{18,18}" type="tel" name="phone" placeholder="Ваш телефон" class="cta-input">
               <input required type="text" placeholder="Комментарий" class="cta-input">
-              <button type="submit" class="btn-main cta-btn">Получить консультацию</button>
+              <button type="submit" class="btn-main cta-btn" data-bs-toggle="modal" data-bs-target="#thanks">Получить консультацию</button>
               <label class="cta-label">
                 <input type="checkbox" required checked class="cta-checkbox">
-                <p>Оставляя заявку <a href="#!">вы соглашаетесь <br> с обработкой персональных данных</a></p>
+                <p>Оставляя заявку вы соглашаетесь <br> с <a href="#!">обработкой персональных данных</a></p>
               </label>
               </form>
             </aside>
@@ -1681,10 +1683,10 @@
                 <input required type="text" placeholder="Ваше имя" class="cta-input">
               <input required minlength="18" pattern=".{18,18}" type="tel" name="phone" placeholder="Ваш телефон" class="cta-input">
               <input required type="text" placeholder="Комментарий" class="cta-input">
-              <button type="submit" class="btn-main cta-btn">Получить консультацию</button>
+              <button type="submit" class="btn-main cta-btn" data-bs-toggle="modal" data-bs-target="#thanks">Получить консультацию</button>
               <label class="cta-label">
                 <input type="checkbox" required checked class="cta-checkbox">
-                <p>Оставляя заявку <a href="#!">вы соглашаетесь <br> с обработкой персональных данных</a></p>
+                <p>Оставляя заявку вы соглашаетесь <br> с <a href="#!">обработкой персональных данных</a></p>
               </label>
               </form>
           </div>
@@ -1969,6 +1971,37 @@
 
   <!-- Modal -->
   <div class="modal fade modal-thanks" id="thanks" tabindex="-1" aria-labelledby="thanksLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="modal-close" data-bs-dismiss="modal" aria-label="Close">
+            <img src="images/icons/modal-close.svg" alt="">
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="thanks-block">
+            <h3>Спасибо за вашу заявку!</h3>
+
+            <div class="thanks-text">
+              <p>Ожидайте звонка менеджера в рабочее время</p>
+            </div>
+            <div class="thanks-graphic">
+              <p><span>Пн-Пт:</span> с 9:30 до 19:00</p>
+              <p><span>Сб:</span> с 10:00 до 15:00</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Button trigger modal -->
+  <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#thanks2">
+    Launch demo modal
+  </button> -->
+
+  <!-- Modal -->
+  <div class="modal fade modal-thanks" id="thanks2" tabindex="-1" aria-labelledby="thanksLabel2" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
