--- a/app/catalog-3.html
+++ b/app/catalog-3.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="ru">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=0">
-  <title>Tigeo</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet"> 
-  <link rel="stylesheet" href="libs/bootstrap5/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.min.css?ver=6">
-  <link rel="stylesheet" href="css/card.css">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=0">
+    <title>Tigeo</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="libs/bootstrap5/bootstrap.min.css">
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="css/style.min.css?ver=6">
+    <link rel="stylesheet icon" href="css/card.css">
 </head>
 
 <body>
@@ -1264,6 +1265,37 @@
 
   <!-- Modal -->
   <div class="modal fade modal-thanks" id="thanks" tabindex="-1" aria-labelledby="thanksLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="modal-close" data-bs-dismiss="modal" aria-label="Close">
+            <img src="images/icons/modal-close.svg" alt="">
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="thanks-block">
+            <h3>Спасибо за вашу заявку!</h3>
+
+            <div class="thanks-text">
+              <p>Ожидайте звонка менеджера в рабочее время</p>
+            </div>
+            <div class="thanks-graphic">
+              <p><span>Пн-Пт:</span> с 9:30 до 19:00</p>
+              <p><span>Сб:</span> с 10:00 до 15:00</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Button trigger modal -->
+  <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#thanks2">
+    Launch demo modal
+  </button> -->
+
+  <!-- Modal -->
+  <div class="modal fade modal-thanks" id="thanks2" tabindex="-1" aria-labelledby="thanksLabel2" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
