--- a/app/payment-and-shipping.html
+++ b/app/payment-and-shipping.html
@@ -806,7 +806,10 @@
                                   Самовывоз из офиса в Москве - БЕСПЛАТНО.
                                   Офис работает по рабочим дням с 9:00 до 18:00. Перед приездом, пожалуйста, договоритесь с менеджером о встрече</span>
                               </p>
-                              <a href="#!" class="pay-ship-more">Развернуть</a>
+                              <a href="#!" class="pay-ship-more">
+                                <span class="yes">Развернуть</span>
+                                <span class="no">Свернуть</span>
+                              </a>
                           </div>
                       </div>
                   </div>
@@ -1121,6 +1124,37 @@
 
   <!-- Modal -->
   <div class="modal fade modal-thanks" id="thanks" tabindex="-1" aria-labelledby="thanksLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="modal-close" data-bs-dismiss="modal" aria-label="Close">
+            <img src="images/icons/modal-close.svg" alt="">
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="thanks-block">
+            <h3>Спасибо за вашу заявку!</h3>
+
+            <div class="thanks-text">
+              <p>Ожидайте звонка менеджера в рабочее время</p>
+            </div>
+            <div class="thanks-graphic">
+              <p><span>Пн-Пт:</span> с 9:30 до 19:00</p>
+              <p><span>Сб:</span> с 10:00 до 15:00</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Button trigger modal -->
+  <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#thanks2">
+    Launch demo modal
+  </button> -->
+
+  <!-- Modal -->
+  <div class="modal fade modal-thanks" id="thanks2" tabindex="-1" aria-labelledby="thanksLabel2" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
