--- a/app/blog.html
+++ b/app/blog.html
@@ -2,6 +2,10 @@
 <html lang="ru">
 
 <head>
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=0">
   <title>Tigeo</title>
