--- a/app/checkout-page.html
+++ b/app/checkout-page.html
@@ -778,16 +778,16 @@
                   <form action="#!" id="checkout-form">
                     <h5>Контактные данные</h5>
                     <div class="row">
-                      <div class="col-lg-6 form-group pr-10">
+                      <div class="col-lg-6 form-group">
                         <input type="text" name="name" id="name" placeholder="Имя *" required>
                       </div>
-                      <div class="col-lg-6 form-group pl-10">
+                      <div class="col-lg-6 form-group">
                         <input type="email" name="email" id="email" placeholder="E-mail*" required>
                       </div>
-                      <div class="col-lg-6 form-group pr-10">
+                      <div class="col-lg-6 form-group">
                         <input type="text" name="inn" id="inn" placeholder="ИНН">
                       </div>
-                      <div class="col-lg-6 form-group pl-10">
+                      <div class="col-lg-6 form-group">
                         <input type="tel" name="phone" id="phone" placeholder="Телефон*" required>
                       </div>
                     </div>
@@ -800,10 +800,10 @@
                     </label>
 
                     <div class="row two">
-                      <div class="col-lg-6 form-group pr-10">
+                      <div class="col-lg-6 form-group">
                         <input type="text" name="city" id="city" placeholder="Город">
                       </div>
-                      <div class="col-lg-6 form-group pl-10">
+                      <div class="col-lg-6 form-group">
                         <input type="text" name="address" id="address" placeholder="Адрес">
                       </div>
                     </div>
