--- a/app/compare.html
+++ b/app/compare.html
@@ -1685,7 +1685,7 @@
   </div>
 
     <script src="js/main.min.js"></script>
-    <script src="js/main.js"></script>
+    <!-- <script src="js/main.js"></script> -->
     <script src="libs/bootstrap5/bootstrap.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
