--- a/app/index.html
+++ b/app/index.html
@@ -2364,7 +2364,7 @@
 
 
   <script src="js/main.min.js"></script>
-  <script src="js/main.js"></script>
+  <!-- <script src="js/main.js"></script> -->
   <script src="libs/bootstrap5/bootstrap.min.js"></script>
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/script.js"></script>
