--- a/app/rent.html
+++ b/app/rent.html
@@ -2075,7 +2075,7 @@
 
 
   <script src="js/main.min.js"></script>
-  <script src="js/main.js"></script>
+  <!-- <script src="js/main.js"></script> -->
   <script src="libs/bootstrap5/bootstrap.min.js"></script>
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/script.js"></script>
