--- a/app/service-center.html
+++ b/app/service-center.html
@@ -985,17 +985,17 @@
               <div class="row">
                 <div class="col-lg-8">
                   <div class="row">
-                    <div class="col-lg-6 pr-10 form-group">
+                    <div class="col-lg-6 form-group">
                       <input type="text" name="inn" id="inn" placeholder="ИНН">
                     </div>
-                    <div class="col-lg-6 pl-10 form-group">
+                    <div class="col-lg-6 form-group">
                       <input type="tel" name="phone" id="phone" placeholder="Телефон*" required>
                     </div>
 
-                    <div class="col-lg-6 pr-10 form-group">
+                    <div class="col-lg-6 form-group">
                       <input type="text" name="name" id="name" placeholder="Имя *" required>
                     </div>
-                    <div class="col-lg-6 pl-10 form-group">
+                    <div class="col-lg-6 form-group">
                       <input type="text" name="model" id="model" placeholder="Модель прибора и серийный номер">
                     </div>
                     <div class="col-lg-6 examine-btn">
@@ -1571,7 +1571,7 @@
 
 
   <script src="js/main.min.js"></script>
-  <script src="js/main.js"></script>
+  <!-- <script src="js/main.js"></script> -->
   <script src="libs/bootstrap5/bootstrap.min.js"></script>
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/script.js"></script>
