--- a/app/index.html
+++ b/app/index.html
@@ -1832,6 +1832,7 @@
         </div>
       </section>
       <section class="brends">
+        <img src="images/company-bg.svg" alt="" class="brends-bg">
         <div class="container">
           <h2 class="brends__title">В ассортименте исключительно <br> оригинальное оборудование</h2>
           <div class="brends-list">
