--- a/app/index.html
+++ b/app/index.html
@@ -1902,6 +1902,7 @@
             </div>
             <div class="reviews-item">
               <div class="reviews-i">
+                <a href="images/doc-1.png" class="rev-icon"><img src="images/zoom-icon.svg" alt=""></a>
                 <a href="images/doc-1.png">
                   <img src="images/doc-1.png" alt="img">
                 </a>
@@ -1918,6 +1919,7 @@
             </div>
             <div class="reviews-item">
               <div class="reviews-i">
+                <a href="images/doc-1.png" class="rev-icon"><img src="images/zoom-icon.svg" alt=""></a>
                 <a href="images/doc-1.png">
                   <img src="images/doc-1.png" alt="img">
                 </a>
@@ -1934,6 +1936,7 @@
             </div>
             <div class="reviews-item">
               <div class="reviews-i">
+                <a href="images/doc-1.png" class="rev-icon"><img src="images/zoom-icon.svg" alt=""></a>
                 <a href="images/doc-1.png">
                   <img src="images/doc-1.png" alt="img">
                 </a>
