--- a/app/index.html
+++ b/app/index.html
@@ -1428,7 +1428,7 @@
       <section class="service">
         <div class="container">
           <h2 class="service__title">Сервис и&nbsp;техподдержка</h2>
-          <p class="subtitle servie__subtitle">В какой бы точке РФ <br> вы ни находились</p>
+          <p class="subtitle servie__subtitle">В какой бы точке РФ вы ни находились</p>
           <ul class="service-list">
             <li class="service-list__item">
               <a href="#" class="service-list__img">
@@ -1790,7 +1790,7 @@
             </li>
           </ul>
           <div class="extra-btn">
-            <a href="#!" class="btn-main">Рассчитать стоимость</a>
+            <a href="#!" class="btn-main" data-bs-toggle="modal" data-bs-target="#exampleModal">Рассчитать стоимость</a>
           </div>
           </div>
         </div>
